[tool.poetry]
name = "dynamicform"
version = "0.1.0"
description = "Deploy your own form easily."
authors = ["mukezhz <mukezhz@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.3"
python-dotenv = "^0.19.2"
mysqlclient = "^2.1.0"

[tool.poetry.dev-dependencies]
black = {version = "^22.1.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
